<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/toolbar5"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context="com.example.root.textanimation.Main.MainActivity">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:foregroundGravity="left"
            android:scrollbars="vertical"
            android:visibility="visible"

            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp"

            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="142dp"
                android:weightSum="1"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="0dp">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="322dp"
                    android:layout_height="144dp"
                    android:layout_gravity="bottom"
                    android:gravity="center"
                    android:shadowColor="@android:color/darker_gray"
                    android:shadowDx="10"
                    android:shadowDy="10"
                    android:shadowRadius="10"
                    android:text="@string/q5"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"
                    android:textStyle="bold|italic" />
                />
            </LinearLayout>

            <LinearLayout
                android:layout_width="287dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:background="@android:drawable/alert_light_frame"
                android:orientation="vertical"
                android:scrollbars="vertical"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="0dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"

                    >

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@android:drawable/editbox_dropdown_light_frame">


                        <TextView
                            android:id="@+id/questionE1"
                            android:layout_width="200dp"
                            android:layout_height="45dp"
                            android:layout_gravity="left"
                            android:layout_weight="0.11"
                            android:text="@string/questionE1"
                            android:textAlignment="viewStart"
                            android:textColor="@android:color/background_dark"
                            android:textSize="15sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <RadioButton
                            android:id="@+id/radioId1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right" />

                    </FrameLayout>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"

                    >

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@android:drawable/editbox_dropdown_light_frame">

                        <TextView
                            android:id="@+id/questionE2"
                            android:layout_width="200dp"
                            android:layout_height="45dp"
                            android:layout_gravity="left"
                            android:layout_weight="0.11"
                            android:text="@string/questionE2"

                            android:textColor="@android:color/background_dark"
                            android:textSize="15sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <RadioButton
                            android:id="@+id/radioId2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:textColorLink="@color/colorPrimary" />

                    </FrameLayout>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"

                    >

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@android:drawable/editbox_dropdown_light_frame">


                        <TextView
                            android:id="@+id/questionE3"
                            android:layout_width="200dp"
                            android:layout_height="45dp"
                            android:layout_gravity="left"
                            android:layout_weight="0.11"
                            android:text="@string/questionE3"
                            android:textColor="@android:color/background_dark"
                            android:textSize="15sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <RadioButton
                            android:id="@+id/radioId3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:textColorLink="@android:color/holo_red_dark" />

                    </FrameLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="62dp"
                    android:orientation="horizontal"

                    >
                    <Button
                        android:id="@+id/btnPrev"
                        android:layout_width="130dp"
                        android:layout_height="match_parent"
                        android:background="@drawable/button"
                        android:shadowColor="@android:color/black"
                        android:shadowDx="5"
                        android:shadowDy="5"
                        android:shadowRadius="5"
                        android:text="@string/prev"
                        android:textAlignment="center"
                        android:textColor="#FFE6ED"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:visibility="visible" />
                    <Button
                        android:id="@+id/btnQuestionFive"
                        android:layout_width="130dp"
                        android:layout_height="match_parent"
                        android:background="@drawable/button_prev"
                        android:shadowColor="@android:color/black"
                        android:shadowDx="5"
                        android:shadowDy="5"
                        android:shadowRadius="5"
                        android:textColor="#FFE6ED"
                        android:text="@string/btn_next"
                        android:textAlignment="center"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:visibility="visible" />

                </LinearLayout>
            </LinearLayout>

        </FrameLayout>


</android.support.constraint.ConstraintLayout>
